# pistachio

./: .gitignore  Cargo.toml  LICENSE  README.md  runtime.c
.github/workflows/: ci.yml  test.yml
examples/: ChurchNumerals.nut  church_numerals.pch
runtime/: runtime.c  runtime.h
src/: anormal.rs  cfg.rs  cg_types.rs  codegen.rs  ctx.rs  lexer.rs  lib.rs  locals.rs  lowering.rs  parser.rs  typecheck.rs  utils.rs  var.rs
src/backend/: cranelift.rs  mod.rs
src/backend/cranelift/: cranelift.rs  mod.rs
src/backend/llvm/: mod.rs
src/between/: anormal.rs  cfg.rs  lowering.rs  mod.rs
src/frontend/: anormal.rs  ast.rs  cfg.rs  common.rs  ctx.rs  diagnostics.rs  lexer.rs  lowering.rs  mod.rs  parser.rs  typecheck.rs  utils.rs  var.rs
src/lower/: mod.rs  print.rs  types.rs
