[package]
name = "wowcaml"
version = "0.1.0"
authors = ["McCoy R. Becker <mccoyb@mit.edu>, Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[lib]
name = "libwml"
path = "src/lib.rs"

[[bin]]
name = "mc"
path = "bin/main.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
color-eyre = "0.5.11"
cranelift-codegen = "0.84.0"
cranelift-entity = "0.84.0"
cranelift-frontend = "0.84.0"
cranelift-module = "0.84.0"
cranelift-native = "0.84.0"
cranelift-object = "0.84.0"
fxhash = "0.2.1"
lexgen = "0.4.0"
parsegen = "0.1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

yansi = "0.5.0"
[profile.release]
lto = true

[profile.dev.package.parsegen]
opt-level = 3
