[package]
name = "wowcaml"
version = "0.1.0"
authors = ["McCoy R. Becker <mccoyb@mit.edu>, Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[lib]
name = "libwml"
path = "src/lib.rs"

[[bin]]
name = "wmlcc"
path = "bin/compiler.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
color-eyre = "0.5.11"
cranelift = { optional = true, version = "0.84.0" }
cranelift-codegen = { optional = true, version = "0.84.0" }
cranelift-entity = { optional = true, version = "0.84.0" }
cranelift-frontend = { optional = true, version = "0.84.0"}
cranelift-module = { optional = true, version = "0.84.0" }
cranelift-object = { optional = true, version = "0.84.0" }
fxhash = "0.2.1"
inkwell = { optional = true, git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
lexgen = "0.4.0"
parsegen = "0.1"
target-lexicon = "0.12.4"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
yansi = "0.5.0"

[build-dependencies]
bindgen = "0.60"

[features]
default = ["cranelift-backend"]
cranelift-backend = ["cranelift", "cranelift-codegen", "cranelift-entity",
                     "cranelift-frontend", "cranelift-module", 
                     "cranelift-object"]
llvm-backend = ["inkwell"]

[profile.release]
lto = true

[profile.dev.package.parsegen]
opt-level = 3
